exports[`mcdoc binder > mcdoc:enum > Bind 'enum () Foo { A = 1, B = 1.2, C = 1.2f, D = 4s, E = \"Hello\", }' 1`] = `
{
  "symbols": {
    "mcdoc": {
      "test::Foo": {
        "data": {
          "typeDef": {
            "kind": "enum",
            "values": [
              {
                "identifier": "A",
                "value": 1
              },
              {
                "identifier": "B",
                "value": 1.2
              },
              {
                "identifier": "C",
                "value": 1.2
              },
              {
                "identifier": "D",
                "value": 4
              },
              {
                "identifier": "E",
                "value": "Hello"
              }
            ]
          }
        },
        "subcategory": "enum",
        "definition": [
          {
            "uri": ""
          }
        ],
        "members": {
          "A": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "B": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "C": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "D": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "E": {
            "definition": [
              {
                "uri": ""
              }
            ]
          }
        }
      }
    }
  },
  "errors": []
}
`;

exports[`mcdoc binder > mcdoc:enum > Bind 'enum (byte) Foo { A = 1, B = 4b, C = 5B, D = 1.2, E = 1.2f, F = 4s, G = \"Hello\", }' 1`] = `
{
  "symbols": {
    "mcdoc": {
      "test::Foo": {
        "data": {
          "typeDef": {
            "kind": "enum",
            "enumKind": "byte",
            "values": [
              {
                "identifier": "A",
                "value": 1
              },
              {
                "identifier": "B",
                "value": 4
              },
              {
                "identifier": "C",
                "value": 5
              },
              {
                "identifier": "D",
                "value": 1
              },
              {
                "identifier": "E",
                "value": 1
              },
              {
                "identifier": "F",
                "value": 4
              },
              {
                "identifier": "G",
                "value": null
              }
            ]
          }
        },
        "subcategory": "enum",
        "definition": [
          {
            "uri": ""
          }
        ],
        "members": {
          "A": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "B": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "C": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "D": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "E": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "F": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "G": {
            "definition": [
              {
                "uri": ""
              }
            ]
          }
        }
      }
    }
  },
  "errors": [
    {
      "range": {
        "start": 22,
        "end": 23
      },
      "message": "Expected byte",
      "severity": 3
    },
    {
      "range": {
        "start": 45,
        "end": 48
      },
      "message": "Expected byte",
      "severity": 3
    },
    {
      "range": {
        "start": 54,
        "end": 58
      },
      "message": "Expected byte",
      "severity": 3
    },
    {
      "range": {
        "start": 64,
        "end": 66
      },
      "message": "Expected byte",
      "severity": 3
    },
    {
      "range": {
        "start": 72,
        "end": 79
      },
      "message": "Expected byte",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc binder > mcdoc:enum > Bind 'enum (double) Foo { A = 1, B = 4d, C = 5D, D = 1.2, E = 1.2f, F = 4s, G = \"Hello\", }' 1`] = `
{
  "symbols": {
    "mcdoc": {
      "test::Foo": {
        "data": {
          "typeDef": {
            "kind": "enum",
            "enumKind": "double",
            "values": [
              {
                "identifier": "A",
                "value": 1
              },
              {
                "identifier": "B",
                "value": 4
              },
              {
                "identifier": "C",
                "value": 5
              },
              {
                "identifier": "D",
                "value": 1.2
              },
              {
                "identifier": "E",
                "value": 1.2
              },
              {
                "identifier": "F",
                "value": 4
              },
              {
                "identifier": "G",
                "value": null
              }
            ]
          }
        },
        "subcategory": "enum",
        "definition": [
          {
            "uri": ""
          }
        ],
        "members": {
          "A": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "B": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "C": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "D": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "E": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "F": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "G": {
            "definition": [
              {
                "uri": ""
              }
            ]
          }
        }
      }
    }
  },
  "errors": [
    {
      "range": {
        "start": 24,
        "end": 25
      },
      "message": "Expected double",
      "severity": 3
    },
    {
      "range": {
        "start": 56,
        "end": 60
      },
      "message": "Expected double",
      "severity": 3
    },
    {
      "range": {
        "start": 66,
        "end": 68
      },
      "message": "Expected double",
      "severity": 3
    },
    {
      "range": {
        "start": 74,
        "end": 81
      },
      "message": "Expected double",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc binder > mcdoc:enum > Bind 'enum (float) Foo { A = 1, B = 4f, C = 5F, D = 1.2, E = 1.2f, F = 4s, G = \"Hello\", }' 1`] = `
{
  "symbols": {
    "mcdoc": {
      "test::Foo": {
        "data": {
          "typeDef": {
            "kind": "enum",
            "enumKind": "float",
            "values": [
              {
                "identifier": "A",
                "value": 1
              },
              {
                "identifier": "B",
                "value": 4
              },
              {
                "identifier": "C",
                "value": 5
              },
              {
                "identifier": "D",
                "value": 1.2
              },
              {
                "identifier": "E",
                "value": 1.2
              },
              {
                "identifier": "F",
                "value": 4
              },
              {
                "identifier": "G",
                "value": null
              }
            ]
          }
        },
        "subcategory": "enum",
        "definition": [
          {
            "uri": ""
          }
        ],
        "members": {
          "A": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "B": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "C": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "D": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "E": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "F": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "G": {
            "definition": [
              {
                "uri": ""
              }
            ]
          }
        }
      }
    }
  },
  "errors": [
    {
      "range": {
        "start": 23,
        "end": 24
      },
      "message": "Expected a float",
      "severity": 3
    },
    {
      "range": {
        "start": 46,
        "end": 49
      },
      "message": "Expected a float",
      "severity": 3
    },
    {
      "range": {
        "start": 65,
        "end": 67
      },
      "message": "Expected a float",
      "severity": 3
    },
    {
      "range": {
        "start": 73,
        "end": 80
      },
      "message": "Expected a float",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc binder > mcdoc:enum > Bind 'enum (int) Foo { A = 1, B = 1.2, C = 1.2f, D = 4s, E = \"Hello\", }' 1`] = `
{
  "symbols": {
    "mcdoc": {
      "test::Foo": {
        "data": {
          "typeDef": {
            "kind": "enum",
            "enumKind": "int",
            "values": [
              {
                "identifier": "A",
                "value": 1
              },
              {
                "identifier": "B",
                "value": 1
              },
              {
                "identifier": "C",
                "value": 1
              },
              {
                "identifier": "D",
                "value": 4
              },
              {
                "identifier": "E",
                "value": null
              }
            ]
          }
        },
        "subcategory": "enum",
        "definition": [
          {
            "uri": ""
          }
        ],
        "members": {
          "A": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "B": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "C": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "D": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "E": {
            "definition": [
              {
                "uri": ""
              }
            ]
          }
        }
      }
    }
  },
  "errors": [
    {
      "range": {
        "start": 28,
        "end": 31
      },
      "message": "Expected int",
      "severity": 3
    },
    {
      "range": {
        "start": 37,
        "end": 41
      },
      "message": "Expected int",
      "severity": 3
    },
    {
      "range": {
        "start": 47,
        "end": 49
      },
      "message": "Expected int",
      "severity": 3
    },
    {
      "range": {
        "start": 55,
        "end": 62
      },
      "message": "Expected int",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc binder > mcdoc:enum > Bind 'enum (long) Foo { A = 1, B = 4l, C = 5L, D = 1.2, E = 1.2f, F = 4s, G = \"Hello\", }' 1`] = `
{
  "symbols": {
    "mcdoc": {
      "test::Foo": {
        "data": {
          "typeDef": {
            "kind": "enum",
            "enumKind": "long",
            "values": [
              {
                "identifier": "A",
                "value": 1
              },
              {
                "identifier": "B",
                "value": 4
              },
              {
                "identifier": "C",
                "value": 5
              },
              {
                "identifier": "D",
                "value": 1
              },
              {
                "identifier": "E",
                "value": 1
              },
              {
                "identifier": "F",
                "value": 4
              },
              {
                "identifier": "G",
                "value": 0
              }
            ]
          }
        },
        "subcategory": "enum",
        "definition": [
          {
            "uri": ""
          }
        ],
        "members": {
          "A": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "B": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "C": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "D": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "E": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "F": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "G": {
            "definition": [
              {
                "uri": ""
              }
            ]
          }
        }
      }
    }
  },
  "errors": [
    {
      "range": {
        "start": 22,
        "end": 23
      },
      "message": "Expected a long",
      "severity": 3
    },
    {
      "range": {
        "start": 45,
        "end": 48
      },
      "message": "Expected a long",
      "severity": 3
    },
    {
      "range": {
        "start": 54,
        "end": 58
      },
      "message": "Expected a long",
      "severity": 3
    },
    {
      "range": {
        "start": 64,
        "end": 66
      },
      "message": "Expected a long",
      "severity": 3
    },
    {
      "range": {
        "start": 72,
        "end": 79
      },
      "message": "Expected a long",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc binder > mcdoc:enum > Bind 'enum (short) Foo { A = 1, B = 4s, C = 5S, D = 1.2, E = 1.2f, F = 4b, G = \"Hello\", }' 1`] = `
{
  "symbols": {
    "mcdoc": {
      "test::Foo": {
        "data": {
          "typeDef": {
            "kind": "enum",
            "enumKind": "short",
            "values": [
              {
                "identifier": "A",
                "value": 1
              },
              {
                "identifier": "B",
                "value": 4
              },
              {
                "identifier": "C",
                "value": 5
              },
              {
                "identifier": "D",
                "value": 1
              },
              {
                "identifier": "E",
                "value": 1
              },
              {
                "identifier": "F",
                "value": 4
              },
              {
                "identifier": "G",
                "value": null
              }
            ]
          }
        },
        "subcategory": "enum",
        "definition": [
          {
            "uri": ""
          }
        ],
        "members": {
          "A": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "B": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "C": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "D": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "E": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "F": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "G": {
            "definition": [
              {
                "uri": ""
              }
            ]
          }
        }
      }
    }
  },
  "errors": [
    {
      "range": {
        "start": 23,
        "end": 24
      },
      "message": "Expected short",
      "severity": 3
    },
    {
      "range": {
        "start": 46,
        "end": 49
      },
      "message": "Expected short",
      "severity": 3
    },
    {
      "range": {
        "start": 55,
        "end": 59
      },
      "message": "Expected short",
      "severity": 3
    },
    {
      "range": {
        "start": 65,
        "end": 67
      },
      "message": "Expected short",
      "severity": 3
    },
    {
      "range": {
        "start": 73,
        "end": 80
      },
      "message": "Expected short",
      "severity": 3
    }
  ]
}
`;

exports[`mcdoc binder > mcdoc:enum > Bind 'enum (string) Foo { A = 1, B = 1.2, C = \"Hello\", }' 1`] = `
{
  "symbols": {
    "mcdoc": {
      "test::Foo": {
        "data": {
          "typeDef": {
            "kind": "enum",
            "enumKind": "string",
            "values": [
              {
                "identifier": "A",
                "value": "1"
              },
              {
                "identifier": "B",
                "value": "1.2"
              },
              {
                "identifier": "C",
                "value": "Hello"
              }
            ]
          }
        },
        "subcategory": "enum",
        "definition": [
          {
            "uri": ""
          }
        ],
        "members": {
          "A": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "B": {
            "definition": [
              {
                "uri": ""
              }
            ]
          },
          "C": {
            "definition": [
              {
                "uri": ""
              }
            ]
          }
        }
      }
    }
  },
  "errors": [
    {
      "range": {
        "start": 24,
        "end": 25
      },
      "message": "Expected a string",
      "severity": 3
    },
    {
      "range": {
        "start": 31,
        "end": 34
      },
      "message": "Expected a string",
      "severity": 3
    }
  ]
}
`;
